--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  url_launcher: ^6.3.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -90,3 +91,5 @@ flutter:
   assets:
     - assets/
     - assets/logo/
+    - assets/icons/
+    - assets/images/s1.png
